--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/orm": "^3.0",
         "nelmio/cors-bundle": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.3",
+        "phpoffice/phpspreadsheet": "^2.0",
         "phpstan/phpdoc-parser": "^1.25",
         "symfony/asset": "6.4.*",
         "symfony/asset-mapper": "6.4.*",
